checking from windows

--- a/testLatex.tex
+++ b/testLatex.tex
@@ -2,7 +2,7 @@
 \begin{document}
 	\pagenumbering{arabic}%nums 1,2,3
 	\pagestyle{empty}%non on front page
-\title{My Report}
+\title{Smart-Building Report}
 \author{Simon Remington}
 \date{\today}
 \maketitle
@@ -12,8 +12,8 @@
 \newpage
 
 \section{Introduction}
-So I write here
-\section{Introduction}
+This is the report to my project. It covers the procediurs I have taken so far
+\section{Lets Start}
 \newpage
 \section{New Paragraph}
 well hello there
